--- a/templates/main.html
+++ b/templates/main.html
@@ -21,15 +21,17 @@
     {% include 'navbar.html' %}
 
     {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
+        {% for message in messages %}
+            <div class="alert alert--{{message.tags}}">
+                <p class="alert__message">{{ message }}</p>
+                <button style="cursor: pointer;" class="alert__close">X</button>
+            </div>
+        {% endfor %}
     {% endif %}
 
     {% block content %}
 
     {% endblock content %}
 </body>
+<script src="{% static 'uikit/app.js' %}"></script>
 </html>
