--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -11,11 +11,11 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="#" method="get">
+          <form class="form" action="{% url 'profiles' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">Search Developers </label>
-              <input class="input input--text" id="formInput#search" type="text" name="text"
-                placeholder="Search by developer name" />
+              <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                value="{{search_query}}" placeholder="Search by developer name" />
             </div>
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -41,7 +41,7 @@
                         <!-- <p class="dev__info">{{profile.bio|slice:"150"}}</p> 限制字數在150，超過的部分變成... -->
                         <p class="dev__info">{{profile.bio}}</p>
                         <div class="dev__skills">
-                          <!--限制skill只顯示5個個 -->
+                          <!--限制skill只顯示5個 -->
                             {% for skill in profile.skill_set.all|slice:"5" %} 
                                 <span class="tag tag--pill tag--main">
                                     <small>{{skill}}</small>
