--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -54,5 +54,6 @@
       </div>
     </section>
 
+    {% include 'pagination.html' with queryset=projects custom_range=custom_range %}
   </main>
 {% endblock content %}
