--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -55,5 +55,7 @@
         </div>
       </div>
     </section>
+
+    {% include 'pagination.html' with queryset=profiles custom_range=custom_range %}
   </main>
 {% endblock content %}
