--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="{% url 'projects' %}" method="get">
+          <form class="form" id="searchForm" action="{% url 'projects' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">Search By Projects </label>
               <input class="input input--text" id="formInput#search" type="text" name="search_query"
@@ -57,3 +57,4 @@
     {% include 'pagination.html' with queryset=projects custom_range=custom_range %}
   </main>
 {% endblock content %}
+
