--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -6,7 +6,7 @@
     <main class="formPage my-xl">
         <div class="content-box">
             <div class="formWrapper">
-                <a class="backButton" href="#"><i class="im im-angle-left"></i></a>
+                <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
                 <br>
 
                 <form class="form" method="POST" enctype="multipart/form-data"> <!-- 上傳圖片要使用 enctype="multipart/form-data" -->
@@ -20,10 +20,48 @@
                         </div>
                     {% endfor %}
 
+                    <div class="form__field">
+                        {% for tag in project.tags.all %}
+                            <div data-tag="{{tag.id}}" data-project="{{project.id}}" class="project-tag tag tag--pill tag--main">{{tag.name}} &#215;</div>
+                        {% endfor %}
+                    </div>
+
+                    <div class="form__field">
+                        <label for="formInput#text">Tags</label>
+                        <textarea class="input" name="newtags" id="" cols="30" rows="5" placeholder="Add tags here..."></textarea>
+                    </div>
+
                     <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
                 </form>
             </div>
         </div>
     </main>
+
+    <script>
+        const tags = document.getElementsByClassName("project-tag")
+
+        for ( let i = 0; i < tags.length; i++){
+            tags[i].addEventListener('click', (e) => {
+                let tagId = e.target.dataset.tag
+                let projectId = e.target.dataset.project
+
+                // console.log(tagId)
+                // console.log(projectId)
+                
+                fetch('http://127.0.0.1:8000/api/remvoe-tag/', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({'project': projectId, 'tag': tagId})
+                }).then((response) => {
+                    response.json()
+                }).then((data) => {
+                    e.target.remove()
+                })
+                
+            })
+        }
+    </script>
 
 {% endblock %}
